[project]
name = "google-maps-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
    "tenacity>=8.2.3",
    "sqlalchemy>=2.0.41",
]
